--- a/src/logic/TODO.txt
+++ b/src/logic/TODO.txt
@@ -10,20 +10,28 @@ Chand to nokte:
 !!! alireza farahani
 man be card o deck o table dast zadam!
 
-TODOs:
 
-GameLogic.java:
-	-> checkMove()
-	-> playMove()   
-			-> PlayCardMove
-			-> SelectHokmMove
-			-> SetHakemMove
+@alireza: check Team.java
+
+----------------------------------------------------------------
+TODOs:
 	-> requestInfo()
 			-> TurnRequest
 			-> HokmRequest
 			-> HakemRequest
 			-> StatsRequest  
 
+
+
+-------------- DONE --------------
+
+Hadi
+GameLogic.java:
+	-> checkMove()
+	-> playMove()   
+			-> PlayCardMove
+			-> SelectHokmMove
+			-> SetHakemMove
 
 Alireza! man neveshtam inaro
 Table.java:
