--- a/src/logic/TODO.txt
+++ b/src/logic/TODO.txt
@@ -20,7 +20,9 @@ TODOs:
 			-> HokmRequest
 			-> HakemRequest
 			-> StatsRequest  
-
+	-> Move
+			-> serialize
+			-> deserialize
 
 
 -------------- DONE --------------
